datatable Print data not visible issue --Partial updated

--- a/public/admin/css/custom.css
+++ b/public/admin/css/custom.css
@@ -1,3 +1,21 @@
+
+@media print {
+    body {
+        color: #000 !important;
+        background: transparent;
+    }
+    table {
+        color: #000 !important;
+    }
+    tr, th, td {
+        color: #000 !important;
+        background: transparent !important;
+    }
+    *{
+        color: #000 !important;
+    }
+}
+
 /*=============================================================
                 Start Overwrite CSS
  =============================================================*/
